# launch_param_builder

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  package.xml  setup.py
.github/workflows/: ci.yaml  format.yaml  prerelease.yaml
example/: example_node.py  launch_param_builder_example.launch.py  parameter_builder_example.launch.py  parameter_injection_example.launch.py
example/config/: param_file_to_inject.yaml  parameter.xacro  parameter_file  parameters.yaml
launch_param_builder/: __init__.py  launch_argument_builder.py  launch_param_builder.py  utils.py
parameter_builder/: __init__.py  utils.py
test/: test_copyright.py  test_launch_param_builder.py  test_parameter_injection.py
test/data/: param_file_to_inject.yaml  parameter_file_template  parameters_injection.yaml  parameters_template.yaml
